# patrones-arquitectura-proyecto-1

./: .gitignore  README.md
.docs/PostMan/: PAS-2025-TP-1.postman_collection.json
app-patrones/: .dockerignore  Dockerfile  app.py  docker-compose.yml  pyproject.toml  requirements.txt
app-patrones/src/api/: __init__.py  config.py
app-patrones/src/api/controllers/: persona.py
app-patrones/src/api/dto/: direccion.py  persona.py
app-patrones/src/api/routes/: __init__.py  direccion.py  persona.py
app-patrones/src/core/database/: db.py  seeds.py
app-patrones/src/core/models/: direccion.py  persona.py
app-patrones/src/core/repositories/: base.py  direccion.py  persona.py
app-patrones/src/core/services/: direccion.py  persona.py
