[tool.poetry]
name = "app-patrones"
version = "0.1.0"
description = ""
authors = ["Franco Kumichel <francokumichel1996@gmail.com>"]
readme = "README.md"
packages = [{include = "app_patrones", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
